tests/testcases/errors/BCE0083-1.boo
"""
BCE0083-1.boo(5,23): BCE0083: Static constructors must be private.
"""
class Foo:
	public static def constructor():
		pass

